@@ -7,6 +7,8 @@ Changes for version 0.0-77
  
 * fix to gdf and do.subset=TRUE. (Thanks Stephanie)
 
+* fix to font.attr argument of insert method for gtext. (Had commented
+  out for speed, but forgot to fix ...) THanks Yvonnick.
 
 Changes for version 0.0-76
 --------------------------
