@@ -1,3 +1,9 @@
+2011-09-26  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gtext.R (.addTags): had commented out them code for
+	insert. Put back in. The code can take awhile, so called first
+	time user requests it, not on startup.
+
 2011-09-14  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/ggrid.R (addNewColumnDialog): fixed subset feature. Broken via
